Tweak footer for larger layouts to prevent overlap from played cover

--- a/client/styles/medium/_site.scss
+++ b/client/styles/medium/_site.scss
@@ -2,7 +2,8 @@ $site_width: 100% / 4 * 3;
 
 @include medium {
 
-    .site {
+    .site,
+    footer {
         width: $site_width;
     }
 
