--- a/client/styles/small/_site.scss
+++ b/client/styles/small/_site.scss
@@ -2,12 +2,20 @@ $site_width: 100% / 3 * 2;
 
 @include small {
 
-    .site {
-        margin-bottom: 3em;
+    .site,
+    footer {
         width: $site_width;
+    }
+
+    .site {
+        margin-bottom: 2em;
 
         @include transform(none);
         @include legacy-pie-clearfix;
+    }
+
+    footer {
+        background: none;
     }
 
 }
