--- a/client/styles/small/_track_played.scss
+++ b/client/styles/small/_track_played.scss
@@ -60,7 +60,7 @@
             position: relative;
             width: 100%;
             z-index: 2;
-            box-shadow: #eee 90em 90em 0 90em;
+            box-shadow: #eee 999em 999em 0 999em;
 
             // hack to force redraw during scrolling on ios
             -webkit-transform: translateZ(0);
